fixes safari flex-wrap (closes #236)

--- a/datausa/assets/scss/elements/_base.scss
+++ b/datausa/assets/scss/elements/_base.scss
@@ -68,6 +68,7 @@ ol {
 
 footer {
   @include box();
+  background-color: $black2;
   padding: 50px;
   width: 100%;
 
