--- a/datausa/assets/scss/elements/_profile.scss
+++ b/datausa/assets/scss/elements/_profile.scss
@@ -1629,10 +1629,7 @@ body.profile, body.map, body.story {
       max-width: 100%;
 
       & > div {
-        @include flex-size(1);
-        min-width: 30%;
-        -webkit-flex: 1 1 30%;
-        flex: 1;
+        @include flex-size(1 0 300px);
         @include flex();
         @include align-items(center);
         height: 200px;
